--- a/js/index.html
+++ b/js/index.html
@@ -8,6 +8,6 @@
 <body>
     <h1>ejercicio 1 funciones</h1>
 
-    <script src="/js/ejercicio1.js"></script>
+    <script src="/js/index.js"></script>
 </body>
 </html>
