ejerccios de bucles

--- a/js/index.html
+++ b/js/index.html
@@ -7,7 +7,15 @@
 </head>
 <body>
     <h1>ejercicio 1 funciones</h1>
-
-    <script src="./index.js"></script>
+    <li>funciones
+        <ul><li> <a href="./funciones1.html">Funciones</a></li></ul>
+    </li>
+    <li>
+        <ul><li><a href="">Objectos literales</a></li></ul>
+    </li>
+    <li>
+        <ul><li><a href="">Bucles</a></li></ul>
+    </li>
+    <script src="/js/ejercicio1.js"></script>
 </body>
 </html>
