--- a/index.html
+++ b/index.html
@@ -7,15 +7,14 @@
 </head>
 <body>
     <h1>ejercicio 1 funciones</h1>
-    <li>funciones
-        <ul><li> <a href="./funciones1.html">Funciones</a></li></ul>
-    </li>
-    <li>
-        <ul><li><a href="">Objectos literales</a></li></ul>
-    </li>
-    <li>
-        <ul><li><a href="">Bucles</a></li></ul>
-    </li>
+    <ul>funciones
+        <li> <a href="./funciones1.html">Funciones</a></li>
+    <ul>
+        <li><a href="./objeto.html">Objectos literales</a></li>
+    </ul>
+
+    <ul><li><a href="./bucles.html">Bucles</a></li>
+    </ul>
     <script src="/js/ejercicio1.js"></script>
 </body>
 </html>
