Ejercicios de condicionales

--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
 </head>
 <body>
     <h1>ejercicio 1 funciones</h1>
-    <ul>funciones
-        <li> <a href="./funciones1.html">Funciones</a></li>
-    <ul>
-        <li><a href="./objeto.html">Objectos literales</a></li>
-    </ul>
-
-    <ul><li><a href="./bucles.html">Bucles</a></li>
-    </ul>
-    <script src="/js/ejercicio1.js"></script>
+    <ul><li> <a href="./funciones1.html">Funciones</a></li></ul>
+    <ul><li><a href="./objeto.html">Objectos literales</a></li></ul>
+    <ul><li><a href="./bucles.html">Bucles</a></li></ul>
+    <ul><li><a href="./condicionales.html">Condicionales</a></li></ul>
 </body>
 </html>
