--- a/bucles.html
+++ b/bucles.html
@@ -7,6 +7,6 @@
 </head>
 <body>
     <h1>Bucles</h1>
-    <script src="./index2.js"></script>
+    <script src="./js/index2.js"></script>
 </body>
 </html>
