--- a/funciones1.html
+++ b/funciones1.html
@@ -6,8 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ejercicio 1 funciones</h1>
-    
-    <script src="/js/ejercicio1.js"></script>
+    <h1>Funciones</h1>
+    <script src="./js/ejercicio1.js"></script>
 </body>
 </html>
