--- a/objeto.html
+++ b/objeto.html
@@ -6,12 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>ejercicio 1 funciones</h1>
-    <li>funciones
-        <ul><li> <a href="./">ejercicio 1</a></li></ul>
-    </li>
-    <li></li>
-    <li></li>
-    <script src="/js/index.js"></script>
+    <h1>Objetos literales</h1>
+    <script src="./js/index.js"></script>
 </body>
 </html>
