organizacion de carpetas

--- a/DOM/dom.html
+++ b/DOM/dom.html
@@ -56,7 +56,7 @@
         <p>Acceso denegado!</p>
     </div>
 
-    <script src="./js/index4.js"></script>
+    <script src="../DOM/js/index4.js"></script>
 </body>
 
 </html>
