--- a/DOM/endomingo.html
+++ b/DOM/endomingo.html
@@ -8,6 +8,6 @@
 <body>
     <p>¿Ponemos a hervir el agua?</p>
     <p class="respuesta"></p>
-    <script src="./js/enDomingo.js" ></script>
+    <script src="../DOM/js/enDomingo.js" ></script>
 </body>
 </html>
