--- a/DOM/signo.html
+++ b/DOM/signo.html
@@ -3,14 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Mode</title>
+    <title>Signo - Determinar el Signo de un Número</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <div class="container">
-        <p>¿Querés aplicar dark mode en el sitio?</p>
+        <p>¿De qué signo sos?</p>
         <p class="respuesta"></p>
     </div>
-    <script src="./js/darkmode.js"></script>
+    <script src="../DOM/js/signo.js"></script>
 </body>
 </html>
