--- a/DOM/alBanco.html
+++ b/DOM/alBanco.html
@@ -11,6 +11,6 @@
         <p>¿Podemos ir al banco?</p>
         <p class="respuesta"></p>
     </div>
-    <script src="../DOM/js/alBanco.js"></script>
+    <script src="../dom/js/alBanco.js"></script>
 </body>
 </html>
