--- a/DOM/esmayor.html
+++ b/DOM/esmayor.html
@@ -8,6 +8,6 @@
 <body>
     <p>¿Qué número es mayor?</p>
     <p class="respuesta"></p>
-    <script src="../DOM/js/esmayor.js" ></script>
+    <script src="../dom/js/esmayor.js" ></script>
 </body>
 </html>
