--- a/DOM/signo.html
+++ b/DOM/signo.html
@@ -11,6 +11,6 @@
         <p>¿De qué signo sos?</p>
         <p class="respuesta"></p>
     </div>
-    <script src="../DOM/js/signo.js"></script>
+    <script src="../dom/js/signo.js"></script>
 </body>
 </html>
