--- a/fetch/index.html
+++ b/fetch/index.html
@@ -3,14 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dark Mode</title>
+    <title>Personajes de Rick and Morty</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="container">
-        <p>¿Querés aplicar dark mode en el sitio?</p>
-        <p class="respuesta"></p>
-    </div>
-    <script src="../dom/js/darkmode.js"></script>
+    <h1>Personajes de Rick and Morty</h1>
+    <section class="characterList"></section>
+    <script src="../fetch/index.js"></script>
 </body>
 </html>
