--- a/index1.html
+++ b/index1.html
@@ -10,6 +10,6 @@
     <ul><li> <a href="./funciones1.html">Funciones</a></li></ul>
     <ul><li><a href="./objeto.html">Objectos literales</a></li></ul>
     <ul><li><a href="./bucles.html">Bucles</a></li></ul>
-    <ul><li><a href="./condicionales.html">Condicionales</a></li></ul>
+    <ul><li><a href="./precalentando.html">Condicionales</a></li></ul>
 </body>
 </html>
