--- a/fetch/index.html
+++ b/fetch/index.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html lang="es">
+<html>
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Personajes de Rick and Morty</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="../fetch/style.css">
 </head>
 <body>
+
     <h1>Personajes de Rick and Morty</h1>
-    <section class="characterList"></section>
+    <section class="characterList">
+    </section>
+
     <script src="../fetch/index.js"></script>
 </body>
 </html>
+
